added: admin's Dashboard, Realtime dashboard with data analysic ELK